<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail"
            type="com.example.weather.ui.home.HomeFragmentViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        tools:context=".ui.detail.DetailFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hourText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/conditionIcon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/condition"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/hourText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feelC"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tempC"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/conditionIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feelF"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tempF"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/feelC"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>